--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ openseanfttrades",
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ logicdev406/Openseanfttrades",
     "create-local": "graph create --node http://localhost:8020/ openseanfttrades",
     "remove-local": "graph remove --node http://localhost:8020/ openseanfttrades",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 openseanfttrades"
